; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_strerror.c_curl_share_strerror.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_strerror.c_curl_share_strerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"No error\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"Unknown share option\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"Share currently in use\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"Invalid share handle\00", align 1
@.str.4 = private unnamed_addr constant [14 x i8] c"Out of memory\00", align 1
@.str.5 = private unnamed_addr constant [36 x i8] c"Feature not enabled in this library\00", align 1
@.str.6 = private unnamed_addr constant [19 x i8] c"CURLSHcode unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @curl_share_strerror(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %12 [
    i32 128, label %5
    i32 134, label %6
    i32 132, label %7
    i32 133, label %8
    i32 130, label %9
    i32 129, label %10
    i32 131, label %11
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %13

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %13

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %13

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %13

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %13

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %13

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %1, %11
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %13

13:                                               ; preds = %12, %10, %9, %8, %7, %6, %5
  %14 = load i8*, i8** %2, align 8
  ret i8* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
